<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="invoice"
            type="es.developers.achambi.afines.invoices.ui.InvoiceDetailsPresentation" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/details_progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/invoice_details_loading_failed_message"
            android:visibility="@{invoice.error ? View.VISIBLE : View.GONE}"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/invoice_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:behavior_hideable="true"
            android:visibility="@{invoice.error ? View.INVISIBLE : View.VISIBLE}"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/invoice_details_name_text"
                style="@style/H5Headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@{invoice.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Factura alguna" />

            <TextView
                android:id="@+id/edit_invoice_button"
                style="@style/Overline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/round_edit_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary"
                android:gravity="center|start"
                android:padding="8dp"
                android:text="@string/invoice_details_edit_tag"
                android:visibility="@{invoice.failed ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/delete_invoice_button"
                style="@style/Overline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/round_delete_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary"
                android:gravity="center|start"
                android:padding="8dp"
                android:text="@string/invoice_details_delete_tag"
                android:visibility="@{invoice.failed | invoice.processed ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/edit_invoice_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginBottom="24dp" />

            <TextView
                android:id="@+id/download_invoice_button"
                style="@style/Overline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/round_cloud_download_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary"
                android:gravity="center|start"
                android:padding="8dp"
                android:text="@string/invoice_details_download_tag"
                android:visibility="@{invoice.failed ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/delete_invoice_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginBottom="24dp" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/text_gray"
                app:layout_constraintBottom_toTopOf="@+id/download_invoice_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/invoice_details_state_message_text" />

            <TextView
                android:id="@+id/invoices_details_state_text"
                style="@style/Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{invoice.state}"
                android:textColor="@{invoice.stateMessageColor}"
                tools:textColor="@color/color_state_pending"
                app:layout_constraintStart_toStartOf="@+id/invoice_details_name_text"
                app:layout_constraintTop_toBottomOf="@+id/invoice_details_name_text"
                tools:text="Enviada" />

            <TextView
                android:id="@+id/invoice_details_state_message_text"
                style="@style/Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{invoice.stateMessage}"
                app:layout_constraintEnd_toEndOf="@+id/invoice_details_name_text"
                app:layout_constraintStart_toStartOf="@+id/invoices_details_state_text"
                app:layout_constraintTop_toBottomOf="@+id/invoices_details_state_text"
                tools:text="Tu factura ha sido enviada y esta pendiente de ser revisada" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/invoice_download_details_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminateOnly="true"
            android:visibility="gone"/>
    </FrameLayout>

</layout>
