<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_more_options"
        android:title="more"
        android:icon="@drawable/baseline_more_vert_24"
        android:iconTint="@color/text_primary"
        app:showAsAction="ifRoom" />
</menu>