...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="invoice"
            type="es.developers.achambi.afines.invoices.ui.InvoicePresentation">
        </variable>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/minimal_invoice_container"
...
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="end"
            android:text="@{invoice.stateMessage}"
            app:layout_constraintBottom_toBottomOf="@+id/minimal_invoice_more_button"
            app:layout_constraintEnd_toStartOf="@+id/minimal_invoice_more_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/minimal_invoice_more_button"
            tools:text="Enviada" />

...
