...
        android:id="@+id/progress_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"
        android:visibility="gone">
        <TextView
            android:id="@+id/base_request_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
...
