...

    <string name="invoice_download_error_message">Algo ha ido mal con la descarga. Por favor intentelo otra vez mas tarde.</string>
    <string name="invoice_download_success_message">¡La descarga se ha completado con éxito!</string>

    <string name="invoice_details_loading_failed_message">No se pudo mostrar la factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="invoices_overview_error_message">"No se pudieron recuperar las facturas. Por favor intentelo otra vez mas tarde"</string>
    <string name="invoice_upload_error_message">No se pudo recuperar la factura. Por favor intenterlo otra vez mas tarde.</string>
    <string name="invoices_upload_error_message">No se pudo subir su factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="invoice_delete_success_message">La factura se ha borrado con éxito</string>
    <string name="invoice_delete_error_message">No se ha podido borrar la factura. Por favor intentelo otra vez mas tarde.</string>

...
